--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "dev": "nodemon app.ts"
   },
   "dependencies": {
+    "dotenv": "^16.3.1",
     "nodemon": "^3.0.2",
     "typescript": "^5.3.3"
   },
